# wildata

./: .gitignore  README.md  launch_ui.bat  main.py  pyproject.toml
.dvc/: config
configs/: bulk-import-config-example.yaml  bulk-roi-create-config.yaml  filter_config_example.yaml  gps-update-config-example.yaml  import-config-example.yaml  label_studio_config.xml  roi-create-config.yaml
data/: demo-dataset.dvc
docs/: API_README.md  TRANSFORMATIONS.md  cli_usage.md  partitioning_guide.md
examples/: README_workflow.md  datapipeline_example.py  dvc_integration_example.py  example.py  exif_gps_batch_update_example.py  filtering_example.py  partitioning_example.py  pipeline_demo.py  roi_adapter_example.py  roi_dataset_example.py  roi_filtering_example.py  transformation_example.py  workflow_example.py
microservices/: docker-compose.yml
schema/: annotation_schema.json
scripts/: bulk-import-dataset.bat  create-roi-dataset.bat  example-import-config.yaml  import-config-example.yaml  import-dataset-example.bat  update-gps-example.bat  visualize_data.bat
src/wildata/: cli.py  config.py  logging_config.py  ui.py  visualization.py
src/wildata/adapters/: roi_adapter.py  utils.py
src/wildata/api/: cli.py  config.py  main.py
src/wildata/cli/: cli.py  import_logic.py  models.py  roi_logic.py
src/wildata/converters/: __init__.py  labelstudio_converter.py  yolo_to_master.py
src/wildata/datasets/: detection.py  roi.py
src/wildata/filters/: base.py  feature_extractor.py  filter_config.py  roi_filter_pipeline.py
src/wildata/partitioning/: utils.py
src/wildata/pipeline/: data_manager.py  data_pipeline.py  framework_data_manager.py  loader.py  path_manager.py
src/wildata/transformations/: tiling_transformer.py
src/wildata/validators/: yolo_validator.py
src/wildtrain/: __main__.py  cli.py  config.py
src/wildtrain/adapters/: base_adapter.py  coco_adapter.py  roi_adapter.py  yolo_adapter.py
src/wildtrain/converters/: __init__.py  base_converter.py  coco_to_master.py  yolo_to_master.py
src/wildtrain/filters/: __init__.py  algorithms.py  filter_config.py  filter_pipeline.py  hard_sample_mining.py  roi_to_coco_converter.py
src/wildtrain/partitioning/: __init__.py  utils.py
src/wildtrain/pipeline/: __init__.py  data_manager.py  data_pipeline.py  dvc_manager.py  framework_data_manager.py  loader.py  master_data_manager.py  path_manager.py
src/wildtrain/transformations/: __init__.py  augmentation_transformer.py  base_transformer.py  (+3 more)
tests/: test-cli.py  test_adapters.py  test_cli.py  test_complete_workflow.py  test_converters.py  test_dvc_integration.py  test_invalid_annotation_filtering.py  test_master_validator.py  test_merger.py  test_partitioning.py  test_pipeline.py  test_pipeline_real_data.py  test_pipeline_synthetic.py  test_roi_adapter.py  test_roi_filtering.py  test_transformations.py  test_validators.py
tests/api/: conftest.py  test_api_basic.py  test_endpoints.py  test_models.py  test_services.py
(+16 files in other folders)
