[project]
name = "wildata"
version = "0.1.0"
description = "WildTrain Data Pipeline"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "pycocotools>=2.0.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "albumentations>=2.0.8",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "typer>=0.9.0",
    "dvc>=3.0.0",
    "pre-commit>=4.2.0",
    "spyder-kernels==3.0.*",
    "dvc-s3>=3.2.2",
    "transformers>=4.53.2",
    "accelerate>=1.8.1",
    "scikit-learn>=1.7.0",
    "pandas>=2.3.1",
    "torchmetrics>=1.7.4",
    "pip>=25.1.1",
    "label-studio-sdk>=1.0.18",
    "torch==2.6",
    "torchvision>=0.21.0",
    "numpy>=2.3.1",
    "geopy>=2.4.1",
]

[project.scripts]
wildata = "wildata.cli:app"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["I", "E", "F", "W", "C90"]
ignore = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
dvc = [
    "dvc[s3]>=3.0.0",
    "dvc[gcs]>=3.0.0",
    "dvc[azure]>=3.0.0",
    "dvc[ssh]>=3.0.0",
]
